feat(client): use Collectors to collect stream to list
(java 8 compat)